tests/typechecker/fail/304-short_circuit.hyg
assert(false && 3);
assert(false || 3)